--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jawad0ch/currency-converter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
   "bin": "main.js",
   "publishConfig": {
